@@ -9,3 +9,15 @@ build
 *.user
 /lib/Ninject/*.zip
 /lib/Ninject/*/**
+*.cache
+src/Ninject.MockingKernel.Moq.Test/StyleCop.Cache
+src/Ninject.MockingKernel.NSubstitute.Test/StyleCop.Cache
+src/Ninject.MockingKernel.RhinoMock.Test/StyleCop.Cache
+src/Ninject.MockingKernel.SilverlightTests/StyleCop.Cache
+src/Ninject.MockingKernel.RhinoMock/StyleCop.Cache
+src/Ninject.MockingKernel.NSubstitute/StyleCop.Cache
+src/Ninject.MockingKernel.Test/StyleCop.Cache
+src/Ninject.MockingKernel/StyleCop.Cache
+src/Ninject.MockingKernel.Moq/StyleCop.Cache
+StyleCop.Cache
+/Ninject.Moq.sln.docstates
