@@ -58,10 +58,12 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="DefaultMockRepositoryProvider.cs" />
+    <Compile Include="IMockRepositoryProvider.cs" />
     <Compile Include="MoqMockingKernel.cs" />
     <Compile Include="MoqMockProvider.cs" />
     <Compile Include="MoqModule.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="NinjectSettingsExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ninject.MockingKernel\Ninject.MockingKernel.csproj">
