@@ -1,0 +1,1 @@
+<StyleCopSettings Version="105" />
